# QuotrAPI

./: .gitignore  Cargo.toml  Example.Secrets.toml  README.md
api/: Cargo.toml
api/src/: auth_routes.rs  discord_helpers.rs  lib.rs  web_helpers.rs
api/src/routes/: auth.rs  mod.rs  other.rs
entity/src/: api_keys.rs  lib.rs  prelude.rs
migration/src/: lib.rs  m20231217_014859_create_api_key_table.rs
src/: main.rs
