[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.3.1", features = ["cookies"]}
tokio = "1.26.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
actix-cors = "0.6.5"

derive_more = "0.99.0"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support

service ={ path = "../service"}
entity = { path = "../entity" }